@@ -3,23 +3,23 @@ Hash: SHA256
 
 DIST spotify-client_0.9.4.183.g644e24e.428-1_amd64.deb 47355040 SHA256 dd0d072013918498a65dbc26bfb3dda0aacd7ee122e300bccd39731d8da5d1fa SHA512 f596c79cc69508ec47f7579e73033127c403bed9209cef5b9c1cb88805054f85ebb38eaa28037ae2955a5fb14cc8b3c76b3c2d7668316e4d5a2c80d6fdd6c571 WHIRLPOOL 088c73004fb273d1d0ea143f4da212402a82109f9eb7464cf829f96cd8e0446a8adc976ecc16020a664653d2c8e6bc521b843d075a52c5867d97bbfac1b8cba3
 DIST spotify-client_0.9.4.183.g644e24e.428-1_i386.deb 41740148 SHA256 ca45d057357e4c30efee3838dd941222500463ddd0a1db6981e4d48d7ad986f2 SHA512 0f31fbf2274ca6cf16144bc85c8e71cfe347ad2994c100917a5912b413e976b2f913c3aea4d6cc7fd83bdf9d3c2836cc4d758f90f7afdb1078a14c93c23436d9 WHIRLPOOL bcce68c713606a3c092cf82356f56f4ad84f1e70046eef68ba9263ced73c0e101de082362e44050640ac8bfa968716d2ef7ca97f9e3cd2323e91ee4403b3b58d
-EBUILD spotify-0.9.4.183-r1.ebuild 5773 SHA256 7aa9bdde698400e54bc7ada14296d6e94354f7308c910182fea5dbe288ab801a SHA512 01b7db2800eabc95db526184bf2365a41f2a227aa26f042b0511f36f53b817a08405f3ced9a17ec89db4942962768c78230166238fe5d6d3895c5c7f7d640517 WHIRLPOOL 80a4d8f8b9f291ac48b774e6e17602199cf90dfa6f262b44a6ae2969dbf38f9691e351cc076df72968574c931309e3edd707075d60b7c6748472cf2fe2c87448
-MISC ChangeLog 3877 SHA256 4830a563173a0ffe44ecb0ff8800c0fbc0729b19e80214bb16c148632833de12 SHA512 d513d706419799273ceda6680e1a5ed6b6130b4c3eb11bdee15c243c057c3caea6e822183b6dc935f5c7d497512cbec67baeacdac5cb194c430dd46df1785559 WHIRLPOOL 732ba2be8ab82780f302ae2e505424ebe821d9415e04d11bc07a6581fa80b15eb89213bb05126aa49144119c0be552a488c3ff3555516ac1ae04e311ab946f54
+EBUILD spotify-0.9.4.183-r2.ebuild 5797 SHA256 aeef3b3cbd8ccc56640930373abb96627e0e0a3d407c078e60fcb22efda63fe2 SHA512 98ee524a9e4f37cbb72e66f7d89eacb657282a79a6a495710156d2dbbbe3f376791bc31236b6c63a16f3e5abc800ff5fc86ce918317390a19d0e00f2d1e9c695 WHIRLPOOL 6aa05a3cf638b7e67c040098b2c350b0c744d013cda269ff83d1041a772c493eee964adb98b95b7f90c3dfe36dffbf28c27a5782467174b2baa0a0f130090ef1
+MISC ChangeLog 4065 SHA256 12810e4f5f1714b7b2de026146be42826d56491181980a47f5a0df25549a217c SHA512 a17d4dbadb27ebef2cdb5e118329387f54675e0884481707fddee5b56c841927ec4dc24d3af04170971f9741412640fc08e697b65d2fd259b297a9a7a7bf9dc6 WHIRLPOOL bbe8c3f69b4a250b44820fb1068ff25f48ca49a6722cb03b7942ac7b3489d9c280c8b2fac14bcb9ace1d5994933faa2d909d0d8821c73fa6616fca4ea00da7a2
 MISC metadata.xml 383 SHA256 2b8b3f4b10decd35022fb1973384e6d8ac74c439bcd104263651faada927b728 SHA512 b7be1a1ea17efea5c3d01d812a79e8c84137219c36d9a4ce511f473d99102953df615ce119e5d993253cf1ec65967a2df06f8e23eb2bfb2debe1e03049ffed29 WHIRLPOOL 431d2deed63c25a74019050e19618a1e1d5482b81c03f9d14cc8b01218cb96ca1bc703a94ecaa54a487c02608e6b0ac7080082a4f30ae49b3e8f22a3a81a3fea
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSb12DAAoJECRx6z5ArFrDvzcQANCZ7hLmc0r9Ws/9PfIpp0k7
-SfMCk1JU0+vDxw/K37DdcjgjUKkzWMX4SH2smJv47ixDWZHe9rMySlLkA3wtNBuX
-wp0jFFTmS9nuxPzxG3EqHnxxKLxAXhU9VqI2FndKX9DoJVXlvhQQQqHAcO7kbcg+
-y1cetnVYtY8B0hv5JDaCzwlr/FMNR/qfwZMM9XwR/k2Tq2VWIVguqvhaneVrKT7g
-RK6uzSOMCtTts7W9cw8nI+2zmNRw4gpkeOylTS02QCqkUWjmChCkEPu5MVxLH8K3
-/aOBav65tlvwPlgKI0PzXKeGfTd8l1QD+zLLIicxzH02WnYog3E6fC73MEESe2Qr
-vl9j00SY1eGv619zGkHWxZ9Sw87SyPOJDPNtqn3cEzlfcBzbwfxzTDRSSynyBkmw
-E+gZV1inGEUHas/3fGPC5til8/8+vm+BQiQ/tMTMImHidzIjU4dixTPOKPKrAI1D
-fotp86LMfnGTgd9+67Ecir/O4rDhpnOv7slUKfQ816hKOw0hTXLpBhdKrJzXahG9
-vk75M0EV6FdU90N1cbrYaiUm0hCUywLuZ3OagV1o4LzMM1vw9xkBfIeZnWuOM2iC
-J1OhDNZFpwgkU8n5NJ5O0Gvr+aLOXhKLq3e8gWe7vm0qVVPUjiqJdkFwPZScU1hO
-/17Lx+1kdxelrjRCxEqe
-=F3Zj
+iQIcBAEBCAAGBQJSlrkWAAoJECRx6z5ArFrDJw8P/iy0YiH0nzXsTDtpeZvOrIu4
+e5JmcwRLUPan+vSfAGB20dKUuB00R5ZUJcAxhXp8Fr5vt1AxJvPpPZkL/lV3er5v
+UE8fr5X+lgPwphDR/itIvYvI0332s4kDc1HD91y9+locKAtPseh5FixQrw8mo6vv
+dCh9Oi9gce3xFBapAJ5rkT4w7c4GPQRLQiMv1ygRWwxTPnLWw+51M9eCwK/ftZ2m
+1gcMt1G/FoXNeqHJNgn2Fdrtchyn2+7+WuyOLgkSB8+/qT0u0JGZu+WQPFJD1TBg
+UbhHKol6x3XaB7GufckoYfQ8wVK+Et88NX+pNMEfb3G0kD3MV7k1RDHx1emkgzwc
+qszYOePTAyhZ+fw4rDHbbSLO5klvmCZLgT0Wh2EG3nkG11lfj/vjX1UlEGNRuF4p
+4PWTtQjen5q9fhv7b//2VS8ZygZJP4Y3W5i3V2MwaAmswoKMPMRaSHssiYKknIt/
+zmRL8fTxI30uppzo8BjK1J34bAe1RHVPE4dV/n6cJ9p9UScaQtPg2LyuCBhLSX+m
+4gyw0diPOpuZBn8EYBBPJe09SS98ugVFLiA6Bx0N+VVh7iMEzMBR7rIzfY0DUFdz
+PSUv0xQe6Wl6ENdSf9k2lWTdUhMLhb2rafBQlkTl4Skodo0HnoeZODRRczzx+fAH
+OsAYMLjLhWlXxxHd2kk7
+=uNLv
 -----END PGP SIGNATURE-----
