@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/spotify/spotify-0.9.4.183-r1.ebuild,v 1.1 2013/10/29 07:00:18 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/spotify/spotify-0.9.4.183-r2.ebuild,v 1.1 2013/11/28 03:28:58 prometheanfire Exp $
 
 EAPI=4
 inherit eutils fdo-mime gnome2-utils pax-utils unpacker
@@ -34,9 +34,9 @@ RDEPEND="${DEPEND}
 		x11-libs/libXScrnSaver
 		x11-libs/libXrandr
 		x11-libs/libXrender
-		dev-qt/qtcore:4
+		dev-qt/qtcore:4[qt3support]
 		dev-qt/qtdbus:4
-		dev-qt/qtgui:4
+		dev-qt/qtgui:4[qt3support]
 		dev-qt/qtwebkit:4
 		x11-misc/xdg-utils
 		media-libs/alsa-lib
