@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/spotify
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/spotify/ChangeLog,v 1.22 2013/10/29 07:00:19 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/spotify/ChangeLog,v 1.23 2013/11/28 03:28:58 prometheanfire Exp $
+
+*spotify-0.9.4.183-r2 (28 Nov 2013)
+
+  28 Nov 2013; Matthew Thode <prometheanfire@gentoo.org>
+  +spotify-0.9.4.183-r2.ebuild, -spotify-0.9.4.183-r1.ebuild:
+  turns out we need qt3support
 
 *spotify-0.9.4.183-r1 (29 Oct 2013)
 
